# fcdk

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  profile.txt
.circleci/: config.yml
src/: CMakeLists.txt
src/fcdk/: Exception.h  Plugin.h  SharedLibrary.cc  SharedLibrary.h  abi.cc  abi.h  basic_uri.cc  basic_uri.h  exception.h  logger.cc  logger.h  observer.h  plugin.h  shared_library.cc  shared_library.h  split.cc  split.h
tests/: CMakeLists.txt  PluginTest.h  config.ini  console.ini  empty.ini  line.ini  plugin.cc  test-Exception.cc  test-InterfaceFactory.cc  test-Plugin.cc  test-SharedLibrary.cc  test-abi.cc  test-basic_uri.cc  test-config.h.in  test-exception.cc  test-logger.cc  test-plugin.cc  test-shared_library.cc  test_abi.cc
tests/plugin/: CMakeLists.txt  test-plugin.cc  test-plugin.h
