#===============================================================================
CMAKE_MINIMUM_REQUIRED(VERSION 3.23)


PROJECT( fcdk
  DESCRIPTION "Fratal C++ Development Kit"
  LANGUAGES "CXX"
)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)
ADD_COMPILE_OPTIONS(-Wall -Wextra -pedantic)


IF(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
  INCLUDE(CTest)
  ENABLE_TESTING()
ENDIF()


ADD_SUBDIRECTORY(src)


IF(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND BUILD_TESTING)
  ADD_SUBDIRECTORY(tests)
ENDIF()
